--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>JavaScript Lab</title>
   </head>
-
+<form>
+  <label> Enter Dog Name:</label><br>
+  <input type="text" id="dogName" placeholder="enter the dogs name"><br>
+  <label> Enter Dog Breed:</label><br>
+  <input type="text" id="dogBreed" placeholder="enter the dogs name"><br>
+  <input type="submit" value="Add Dog">
+</form>
   <body>
     <script src="index.js"></script>
   </body>
